# ggj19

./: .gdd.txt.swp  .gitignore  .tm_properties  CMakeLists.txt  example.txt  gdd.txt  ggj19  grammar.txt  make_release.sh  todo.txt
assets/: ballroom.txt  basement-landing.txt  bathroom.txt  childrens-bedroom.txt  dark-corridor.txt  dining-room.txt  foyer.txt  games-room.txt  intro.txt  kitchen.txt  library.txt  living-room.txt  lonely-corridor.txt  master-bedroom.txt  patio.txt  secret-room.txt  silent-corridor.txt  sitting-room.txt  store-room.txt  study.txt  trophy-room.txt
assets/ballroom/: chairs.txt
assets/bathroom/: bathtub.txt  mirror.txt  sink.txt
assets/childrens-bedroom/: beds.txt  dolls-house.txt
assets/dining-room/: chairs.txt  table.txt
assets/foyer/: look-coat-rack.txt  look-drawers.txt  look-shoe-rack.txt  use-door.txt  use-drawers.txt
assets/games-room/: billiards-table.txt  bookcase.txt  trophy.txt
assets/kitchen/: fridge-look.txt  fridge-use.txt  stove-look.txt  stove-use.txt  window.txt
assets/living-room/: coffee-cup.txt  coffee-table.txt  fireplace.txt  sofa.txt
assets/master-bedroom/: bedside-table-look.txt  bedside-table-use.txt  cot.txt  double-bed.txt  safe-locked.txt  safe.txt  user-manual.txt
assets/patio/: chairs.txt  plants.txt  table.txt
assets/secret-room/: button-look.txt  button-use.txt  manual.txt  password.txt  screens.txt
assets/sitting-room/: piano-look.txt  piano-touch.txt  portrait.txt  sofa.txt
assets/store-room/: crates.txt  shelves.txt
assets/study/: desk.txt  newspaper.txt  record-player.txt
assets/trophy-room/: billiards-trophy.txt  key.txt  trophies.txt
build.macOS/: CMakeCache.txt  Makefile  cmake_install.cmake
build.macOS/src/: Makefile  cmake_install.cmake
build.macOS/src/game/: Makefile  cmake_install.cmake  ggj19
build.macOS/src/house/: Makefile  cmake_install.cmake
build.macOS/src/language/: Makefile  cmake_install.cmake
build.win32/: CMakeCache.txt  Makefile  cmake_install.cmake
build.win32/src/: Makefile  cmake_install.cmake
build.win32/src/game/: Makefile  cmake_install.cmake
build.win32/src/game/assets/: basement-landing.txt  master-bedroom.txt  store-room.txt  study.txt
build.win32/src/game/assets/dining-room/: chairs.txt  table.txt
build.win32/src/game/assets/foyer/: look-coat-rack.txt  use-door.txt  use-drawers.txt
build.win32/src/game/assets/kitchen/: stove-look.txt  stove-use.txt  window.txt
build.win32/src/game/assets/living-room/: coffee-cup.txt
build.win32/src/game/assets/master-bedroom/: cot.txt  double-bed.txt
build.win32/src/game/assets/patio/: chairs.txt  table.txt
build.win32/src/game/assets/sitting-room/: piano-touch.txt  portrait.txt
build.win32/src/game/assets/store-room/: crates.txt  shelves.txt
build.win32/src/game/assets/study/: newspaper.txt
build.win32/src/game/assets/trophy-room/: billiards-trophy.txt  key.txt  trophies.txt
build.win32/src/house/: Makefile  cmake_install.cmake
build.win32/src/language/: Makefile  cmake_install.cmake
build.win32/test/: Makefile  cmake_install.cmake
include/game/: driver.hpp  entity.hpp  file.hpp  font.h  ggj19.hpp  sdlio.hpp  utf8.h
include/house/: entity.hpp  file.hpp  loader.hpp
include/language/: command.hpp  lexer.hpp  parser.hpp
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  main.c
src/game/: CMakeLists.txt  driver.cpp  file.cpp  font.c  ggj19.cpp  lexer.cpp  main.cpp  sdlio.cpp  utf8.c
src/house/: CMakeLists.txt  file.cpp  lexer.cpp  loader.cpp
src/language/: CMakeLists.txt  lexer.cpp  parser.cpp
test/: CMakeLists.txt  test.cpp
