cmake_minimum_required(VERSION 3.2)
project(ggj19 VERSION 1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

file(GLOB_RECURSE STORY_FILES ${PROJECT_SOURCE_DIR}/assets/*)
set(PRODUCT_DIR "${CMAKE_SOURCE_DIR}/product")

#set(MACOSX_BUNDLE_INFO_PLIST "${CMAKE_SOURCE_DIR}/info.plist.in")

if(APPLE)
	find_package(SDL2 REQUIRED)
	set(EXECUTABLE_OUTPUT_PATH "${PRODUCT_DIR}/macOS")
ELSE()
	INCLUDE(FindPkgConfig)
	PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
	set(EXECUTABLE_OUTPUT_PATH "${PRODUCT_DIR}/windows")
ENDIF()

include_directories(include ${SDL2_INCLUDE_DIRS})
add_subdirectory(src)

add_custom_target(run
    COMMAND alive
    DEPENDS alive
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
)
